# sertis-crypto-exchange-client

./: .gitignore  README.md  docs.md  pyproject.toml
.github/workflows/: python-checks.yml
examples/: buy_lowest.py
scec/: __init__.py  broker.py
scec/exchanges/: __init__.py  base.py  binance.py  exceptions.py  kraken_futures.py
scec/tests/: conftest.py  test_broker.py
scec/tests/exchanges/: test_base.py  test_binance.py  test_kraken_futures.py
